platform/istio/security/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: api-gateway-authz
  namespace: banking-app
  labels:
    app.kubernetes.io/name: api-gateway-authz
    app.kubernetes.io/part-of: banking-app
spec:
  selector:
    matchLabels:
      app: api-gateway
  action: ALLOW
  rules:
    - to:
        - operation:
            ports: ["8080"]
